# awesome_tools

./: README.md
build_your_page/: build_your_page.md
calibrate_zhengyouzhang/: README.md
calibrate_zhengyouzhang/ch5/cameraCalibration/: CMakeLists.txt  calibdata.txt  calibration.cpp  reference.cpp
calibrate_zhengyouzhang/ch5/camera_calibration/: CMakeLists.txt  VID5.xml  camera_calibration.cpp  in_VID5.xml  out_camera_data.xml
calibrate_zhengyouzhang/ch5/imageBasics/: CMakeLists.txt  imageBasics.cpp  undistortImage.cpp
calibrate_zhengyouzhang/ch5/rgbd/: CMakeLists.txt  joinMap.cpp
calibrate_zhengyouzhang/ch5/stereo/: CMakeLists.txt  showPointCloud.cpp  showPointCloud.h  stereoVision.cpp
draw_chart/: README.md  draw_chart_style_0  draw_chart_style_1  groupBarDemo.m
matlab/FussyControl/: FussyControl.m
some_useful_office_program/: README.md  rename.py
